<resources>
    <string name="app_name">妈妈100</string>
    <string name="confirm">确定</string>
    <string name="modify">修改</string>
    <string name="mama100_dir">mama100</string>
    <string name="apk_name">mama100_bbt</string>
    <string name="doing_req_message">正在处理，请稍候&#8230;</string>
    <string name="doing_req_message2">正在登录，请稍候&#8230;</string>
    <string name="doing_req_message3">正在获取用户信息，请稍候&#8230;</string>
    <string name="main_act_tv_friendly_tips">温馨提示</string>
    <string name="main_act_tv_exit_tips">您确定要退出吗?</string>
    <string name="main_act_tv_exit_tips2">您确定要退出自助积分吗?</string>
    <string name="main_act_tv_confirm">确定</string>
    <string name="main_act_tv_cancel">取消</string>
    <string name="account_login_input_name_hint">用户名或手机号码</string>
    <string name="account_login_input_pwd_hint">请输入密码</string>
    <string name="account_login_message_login_rule">密码必须在6–20个字符之间.</string>
    <string name="account_login_message_warn">帐号格式不正确.</string>
    <string name="account_login_tv_title">用户登录</string>
    <string name="glb_message_log_now">正在登录,请稍后…</string>
    <string name="login_tv_title">登录</string>
    <string name="login_tv_login_pwd">登录密码</string>
    <string name="login_tv_account">帐号</string>
    <string name="login_tv_account2">帐号:</string>
    <string name="login_tv_password">密码</string>
    <string name="login_tv_password2">密码:</string>
    <string name="login_tv_account_hint">手机号码或会员帐号</string>
    <string name="login_tv_remmember_me">记住我</string>
    <string name="login_tv_forget_pwd">忘记密码</string>
    <string name="login_tv_lookfor_pwd"><u>忘记密码</u></string>
    <string name="login_tv_lookfor_pwd2">找回密码</string>
    <string name="login_tv_show_pwd">要显示密码字符</string>
    <string name="login_dialog_choose_name">选择你的用户名</string>
    <string name="login_dialog_no_history">没有历史用户记录</string>
    <string name="type_dialog_choose_type">选择品项</string>
    <string name="type_dialog_no_type">没有品项记录</string>
    <string name="login_et_object_null">输入框对象为空</string>
    <string name="login_et_value_null">输入值不能为空</string>
    <string name="login_et_user_value_length_error">帐号输入不正确，应该为%1$s-%2$s位%3$s</string>
    <string name="login_et_pwd_value_length_error">密码输入不正确，应该为%1$s-%2$s位%3$s</string>
    <string name="local_service_disconnected">服务断联！</string>
    <string name="local_service_connected">服务联上！</string>
    <string name="hint_open_cmnet">您需要在移动网络设置中打开CMNET接入点才可正常使用.</string>
    <string name="hint_open_con">您的网络好像有点不给力，请重试！</string>
    <string name="app_downloading_toast_boost">正在下载妈妈100最新手机版，请查看通知栏！</string>
    <string name="app_downloading_toast_failed">下载失败，不能连接服务器!</string>
    <string name="app_download_ongoing">下载进度…</string>
    <string name="app_download_success">下载成功,点击安装妈妈100手机版软件</string>
    <string name="app_download_failed">下载失败,不能连接服务器</string>
    <string name="app_download_success_tip">妈妈100手机版下载成功</string>
    <string name="app">软件</string>
    <string name="app_update_notification">软件升级通知</string>
    <string name="confirm_update">"马上升级"</string>
    <string name="app_download_start">正在下载妈妈100最新手机版</string>
    <string name="app_download_start_tip">正在从服务器下载</string>
    <string name="app_install_tip">妈妈100已发布新的版本，需要现在升级吗？</string>
    <string name="connect_timeout_error">软件更新失败,请检查您的手机网络</string>
    <string name="socket_timeout_error">软件更新失败,请确定网络正常后重试</string>
    <string name="server_404_error">服务器地址不存在,请稍后重试</string>
    <string name="validate_error">下载更新失败,URL不正确</string>
    <string name="system_exception">软件更新失败,请稍后重试</string>
    <string name="unavailable_network">您的网络好像有点不给力，请重试！</string>
    <string name="app_download_wait_tip">后台已经在下载新版本,请稍等…</string>
    <string name="btn_login">登____录</string>
    <string name="btn_fast_reg">快速注册</string>
    <string name="btn_first_login">首次登录</string>
    <string name="btn_back">返回</string>
    <string name="btn_check">查看</string>
    <string name="btn_share">分享</string>
    <string name="btn_submit">提交</string>
    <string name="btn_save">保存</string>
    <string name="btn_confirm">确认</string>
    <string name="btn_get_vcode">获取验证码</string>
    <string name="btn_cancel">取消</string>
    <string name="submit">提交</string>
    <string name="upload">上 传</string>
    <string name="version">版本%s</string>
    <string name="alert">消息提醒</string>
    <string name="opened">已经打开</string>
    <string name="exit">退出</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="tab_reserve1">预留</string>
    <string name="tab_reserve2">预留2</string>
    <string name="glb_message_login_log">正在自动登录,请稍后…</string>
    <string name="glb_message_sign_log">正在签到,请稍后…</string>
    <string name="glb_message_auto_loading">正在读取数据,请稍后…</string>
    <string name="glb_message_auto_loading2">加载中,请稍后…</string>
    <string name="glb_message_auto_deleting">正在删除,请稍后…</string>
    <string name="glb_message_auto_editing">正在编辑,请稍后…</string>
    <string name="glb_message_auto_summitting_data">正在提交数据,请稍后…</string>
    <string name="glb_message_lastitem">已是最后一条</string>
    <string name="glb_message_noitem">没有查询到任何数据</string>
    <string name="glb_message_page_tip">页</string>
    <string name="current_date"> %1$s  年   %2$s  月  %3$s  日 </string>
    <string name="alert_username_exists">帐号已经存在，请拟订一个新的帐号名称</string>
    <string name="alert_username_format_error">帐号只能由汉字、字母、数字、下划线构成（不区分大小写）</string>
    <string name="alert_username_over_length">帐号长度请控制在7个汉字或14个字符（字母、数字、下划线）以内</string>
    <string name="alert_password_too_simple">密码过于简单，密码中不能包含用户名</string>
    <string name="alert_password_over_length">密码长度不正确，必须是6–14个字符</string>
    <string name="alert_password_format_error">密码格式错误，必须是6–14个字符，且不能包含用户名</string>
    <string name="alert_password_confirm_different">确认密码与密码不一致，请重新输入</string>
    <string name="alert_verifycode_error">验证码输入错误，请重新输入</string>
    <string name="alert_verifycode_need">请输入验证码</string>
    <string name="input_verifycode_need">填写验证码</string>
    <string name="alert_regist_fail">注册失败，请重新输入</string>
    <string name="registing">正在注册</string>
    <string name="logining">正在登录</string>
    <string name="logout_account">退出此帐号</string>
    <string name="not_login">你还没有登录哦！</string>
    <string name="login">登 录</string>
    <string name="yes">确定</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="password1">密</string>
    <string name="password2">码</string>
    <string name="password_confirm">确认密码</string>
    <string name="sex">性别</string>
    <string name="sex1">性</string>
    <string name="sex2">别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="verifycode">验证码</string>
    <string name="verifycode2">验证码:</string>
    <string name="not_clear">看不清</string>
    <string name="username_hint">不超7个汉字14个字符</string>
    <string name="password_hint">6–14位，区别大小写</string>
    <string name="phone_hint">以"0"开头,格式为010–88888888</string>
    <string name="upload_image_title">上传照片</string>
    <string name="sdcard_is_unmounted">SD卡不可读</string>
    <string name="doing_query">正在查询，请稍候…</string>
    <string name="please_wait">正在加载，请稍候…</string>
    <string name="progess_item_count"> %1$d条</string>
    <string name="home_page_message_count">%1$d</string>
    <string name="worksite_mamage_module">现场管理</string>
    <string name="login2_before">用户名或手机号登录</string>
    <string name="login2">请输入妈妈100帐号</string>
    <string name="checking_network">正在检查网络…</string>
    <string name="checking_app_version">正在检查软件版本…</string>
    <string name="latest_app_version">您已经是最新的版本啦!</string>
    <string name="no_sdcard_warning">本地sd卡不存在!</string>
    <string name="checking_data_version">正在检查数据版本…</string>
    <string name="latest_data_version">模块数据已经是最新,不用更新!</string>
    <string name="updating_module_data">正在更新模块数据…</string>
    <string name="update_module_data_success">模块数据更新成功!</string>
    <string name="gl_about_version">版本:</string>
    <string name="gl_about_copyright">妈妈100版权所有</string>
    <string name="gl_about_copyright2">Copyright © 2010 www.mama100.com</string>
    <string name="lookfor_pwd_warning1">请输入您的手机号码，并点击发送验证码。您会在短信中收到一个6位数字组成的验证码。如果没有收到，请点击重新发送。</string>
    <string name="lookfor_pwd_warning2">帐号不存在，请重新输入</string>
    <string name="lookfor_pwd_warning3">请输入您的帐号</string>
    <string name="lookfor_pwd_warning4">手机号码不能为空</string>
    <string name="lookfor_pwd_warning5">请输入11位手机号码</string>
    <string name="lookfor_pwd_warning6">验证码已发送到您的手机,请查收.</string>
    <string name="lookfor_pwd_warning7">正在发送验证码到您手机…</string>
    <string name="lookfor_pwd_warning8">一天最多只能取回三次验证码</string>
    <string name="lookfor_pwd_warning9">登录密码取回成功,请留意接收到的短信.</string>
    <string name="lookfor_pwd_warning10">正在取回登录密码,请稍后…</string>
    <string name="lookfor_pwd_warning11">验证码不能为空</string>
    <string name="lookfor_pwd_warning12">验证码必须是4位数字</string>
    <string name="lookfor_pwd_warning13">已发送密码至您的手机号码。</string>
    <string name="lookfor_pwd_warning14">为确保您的帐号安全，请在登录后，在设置中修重新设置密码。如果没有收到，请重新找回。

\n谢谢！</string>
    <string name="lookfor_pwd_warning15"><u>马上登录</u></string>
    <string name="lookfor_pwd_phone1">手机：</string>
    <string name="lookfor_pwd_phone2">验证码：</string>
    <string name="lookfor_pwd_phone3">手机号：</string>
    <string name="lookfor_pwd_phone1_hint">请输入手机号码</string>
    <string name="lookfor_pwd_phone2_hint">请输入验证码</string>
    <string name="lookfor_pwd_phone3_hint">填写手机号</string>
    <string name="lookfor_pwd_label1">发送验证码</string>
    <string name="lookfor_pwd_label2">重新发送</string>
    <string name="lookfor_pwd_label3">%1$d秒</string>
    <string name="lookfor_pwd_label4">提交验证码</string>
    <string name="glb_message_auto_submitting">正在提交,请稍后…</string>
    <string name="latest_version">最新版本：</string>
    <string name="update_version">更新新版</string>
    <string name="not_latest_version">当前不是最新版，点击更新。</string>
    <string name="thanks_feed_back">感谢您的宝贵意见！</string>
    <string name="feed_back_tip">您的每一条建议，都是我们进步的阶梯(最多输入两百字)！</string>
    <string name="response_feed_back_tip">我们会在2个工作日内进行回复，请留意查收消息，谢谢！</string>
    <string name="new_pwd">新&#160;&#160;&#160;&#160;密&#160;&#160;&#160;&#160;码：</string>
    <string name="new_pwd2">确认新密码：</string>
    <string name="show_pwd">显示密码</string>
    <string name="input_pwd_hint">6–18位</string>
    <string name="regpoint_3">请输入您的产品序列号和防伪码:</string>
    <string name="regpoint_4">您购买的产品是%1$s,将增加%2$s积分，请确认您的购买产品门店:</string>
    <string name="regpoint_5">告诉妈妈100您的购买门店，可以让我们为您提供更好的后续服务。</string>
    <string name="regpoint_label1">产品序列号：</string>
    <string name="regpoint_label2">防伪码：</string>
    <string name="regpoint_label3">门店编号：</string>
    <string name="regpoint_label4">门店编码</string>
    <string name="regpoint_label5">有问题请点这里</string>
    <string name="regpoint_hint1">12位或14位数字</string>
    <string name="regpoint_hint2">16位数字</string>
    <string name="regpoint_hint3">5位或6位数字（必填）</string>
    <string name="regpoint_help_tips_1">1.妈妈100积分有什么用？</string>
    <string name="regpoint_help_tips_2">成为合生元会员后，每次在门店购买合生元、葆艾等产品，就可以凭会员身份累积积分，积分累积一定数额后便可以兑换丰富礼品。</string>
    <string name="regpoint_help_tips_3">2.去哪里查看产品防伪码</string>
    <string name="regpoint_help_tips_4">您可以在产品包装盒上找到防伪标签，刮开涂层后即可获取防伪码。</string>
    <string name="regpoint_help_tips_5">3.如何扫码积分？</string>
    <string name="regpoint_help_tips_6">将刮开的防伪条形码置于扫码器红色区域内，并对准红色的扫描线，软件将自动识别。</string>
    <string name="regpoint_help_tips_7">4.为何选择门店？</string>
    <string name="regpoint_help_tips_8">选择母婴店积分，是为了方便给您提供更好的后续服务，所以为了保证您的积分正常，请选择与购买产品对应正确的母婴店。</string>
    <string name="receiving_name02">姓名：</string>
    <string name="province_and_city">省市：</string>
    <string name="full_address01">街区：</string>
   	<string name="address_manage">管理收货信息</string>
    <string name="receiver_name">收货人姓名</string>
    <string name="receiver_province_and_city">请选择所在省市地区</string>
    <string name="receiver_address">详细街道地址</string>
    <string name="tips_input_verifycode">如果长时间没有收到验证码,请返回重新获取</string>
</resources>