<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   	android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	 >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="50dp"
	    android:paddingLeft="20dp"
	    android:paddingRight="10dp"
	    android:paddingTop="20dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/regpoint_help_tips_1"
            android:textColor="@color/mama100Orange2"
            android:textSize="16dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/regpoint_help_tips_2"
            android:textSize="16dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/regpoint_help_tips_3"
            android:textColor="@color/mama100Orange2" 
            android:layout_marginTop="10dp"
            android:textSize="16dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/regpoint_help_tips_4" 
            android:textSize="16dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/regpoint_help1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/regpoint_help2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/regpoint_help3" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/regpoint_help_tips_5"
            android:textColor="@color/mama100Orange2" 
            android:layout_marginTop="10dp"
            android:textSize="16dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/regpoint_help_tips_6" 
            android:textSize="16dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/regpoint_help4" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/regpoint_help_tips_7"
            android:textColor="@color/mama100Orange2" 
            android:layout_marginTop="10dp"
            android:textSize="16dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/regpoint_help_tips_8" 
            android:textSize="16dp"/>
    </LinearLayout>

</ScrollView>