<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="30dip"
    android:paddingRight="30dip"
    android:paddingTop="80dip" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lookfor_pwd_warning13"
        android:textColor="@color/mama100Orange"
        android:textSize="16sp" />
        
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/lookfor_pwd_warning14"
        android:textColor="@color/black"
        android:textSize="14sp" />
    
    
    <TextView
        android:id="@+id/login_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/lookfor_pwd_warning15"
        android:textColor="@color/mama100Orange"
        android:textSize="16sp" />

    

</LinearLayout>