<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:editTextEx="http://schemas.android.com/apk/res/com.mama100.android.member"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dip"
    android:orientation="vertical"
    android:paddingLeft="10dip"
    android:paddingRight="10dip"
    android:paddingTop="20dip" >

    <com.mama100.android.member.widget.EditTextEx
        android:id="@+id/input_vcode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        editTextEx:hint_text="@string/lookfor_pwd_phone2_hint"
        editTextEx:max_length="8"
        editTextEx:tip_text="@string/lookfor_pwd_phone2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/tips_input_verifycode" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="right" >

        <Button
            android:id="@+id/send_vcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_submit2"
            />
    </LinearLayout>
</LinearLayout>